# onekq-apple

./: README.md  package.json
src/: index.html  main.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: onekq.icns
src-tauri/model_server/: app.py  download.py
src-tauri/src/: backend.rs  main.rs  start_model_server.sh
