[package]
name = "onekq"
version = "0.1.0"
description = "Tauri app for OneKQ"
authors = ["developers@onekq.ai"]
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.5", features = [] }

sysinfo = "0.30"
once_cell = "1.21.3"
ctrlc = "3.4.6"
nix = "0.29.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "onekq"
path = "src/main.rs"
